--- a/webovky.css
+++ b/webovky.css
@@ -20,8 +20,8 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0%;
-  margin-top: 20em;
-  width: 22%;
+  margin-top: 16em;
+  width: 40%;
 }
 
 .invert {
@@ -234,3 +234,20 @@ body {
 
 }
 
+@media screen and (max-width: 1028px){
+    .pic1 img, .pic2 img, .pic3 img {width: 400px; height: auto;}
+    .pic4 img { width: 300px; height: auto;}
+}
+
+@media screen and (max-width: 960px){
+    .pic1, .pic2, .pic3, .pic4 {display: grid; align-items: center; justify-content: center; text-align: center; margin: 0%; float: none; clear: none; }
+    .pic1 li, .pic2 li, .pic3 li, .pic4 li { padding-left:0%; padding-right: 0%; padding-bottom: 10px;}
+    .pic1 ul, .pic2 ul, .pic3 ul, .pic4 ul { text-align: center; color: var(--second-color);}
+    .pic1 img, .pic2 img, .pic3 img , .pic4 img {border-color: var(--third-color); margin: 0%;}
+    .pic1, .pic2, .pic3 {padding: 50px;}
+}
+
+@media screen and (max-width: 476px){
+    .pic1 img, .pic2 img, .pic3 img {width: 300px; height: auto;}
+    .pic4 img { width: 200px; height: auto;}
+}
