--- a/grafika.css
+++ b/grafika.css
@@ -126,3 +126,42 @@ body {
 .grafika7 p {
     margin-bottom: 100px;
 }
+
+@media screen and (max-width: 1850px){ 
+    .grafika1 img, .grafika2 img, .grafika3 img, .grafika4 img, .grafika5 img, .grafika6 img, .grafika7 img {width: auto; height: 150px;}    
+}
+
+@media screen and (max-width: 1630px){ 
+    .grafika1 img, .grafika2 img, .grafika3 img, .grafika4 img, .grafika5 img, .grafika6 img, .grafika7 img {width: auto; height: 120px; }    
+    .mojelogo, .postavy, .infografika, .logo, .webovky, .emoji { padding: 0%; text-align: center;}
+    .mojelogo h4, .postavy h4, .infografika h4, .logo h4, .webovky h4, .emoji h4 {padding: 5px;}
+}
+
+@media screen and (max-width: 1310px){ 
+    .grafika1-1 img, .grafika1-2 img, .grafika2-1 img, .grafika2-2 img, .grafika2-3 img, .grafika3-1 img, .grafika4-1 img, .grafika4-2 img, .grafika5-1 img, .grafika5-2 img, .grafika5-3 img, .grafika6-1 img, .grafika6-2 img, .grafika6-3 img, .grafika6-4 img, .grafika7-1 img, .grafika7-2 img, .grafika7-3 img {
+        margin-left: 50px; margin-right: 50px;}
+    .grafika1 p, .grafika2 p, .grafika3 p, .grafika4 p, .grafika5 p, .grafika6 p, .grafika7 p {
+        font-size: 12px;margin: 10px;
+    }
+}
+
+@media screen and (max-width: 1075px){ 
+    .grafika1-1 img, .grafika1-2 img, .grafika2-1 img, .grafika2-2 img, .grafika2-3 img, .grafika3-1 img, .grafika4-1 img, .grafika4-2 img, .grafika5-1 img, .grafika5-2 img, .grafika5-3 img, .grafika6-1 img, .grafika6-2 img, .grafika6-3 img, .grafika6-4 img, .grafika7-1 img, .grafika7-2 img, .grafika7-3 img {
+        margin-left: 30px; margin-right: 30px;}
+    .grafika1 p, .grafika2 p, .grafika3 p, .grafika4 p, .grafika5 p, .grafika6 p, .grafika7 p {font-size: 12px;margin-left: 25px; margin-right: 25px;}
+}
+
+@media screen and (max-width: 990px){ 
+    .grafika1, .grafika2, .grafika3, .grafika4, .grafika5, .grafika6, .grafika7 { display: flex;}
+    .grafika1 img, .grafika2 img, .grafika3 img, .grafika4 img, .grafika5 img, .grafika6 img, .grafika7 img {width: auto; height: 100px; }    
+    .mojelogo h4, .postavy h4, .infografika h4, .logo h4, .webovky h4, .emoji h4 {margin: 25px; font-size: 35px;}
+    .grafika1 p, .grafika2 p, .grafika3 p, .grafika4 p, .grafika5 p, .grafika6 p, .grafika7 p {font-size: 12px;margin-left: 10px; margin-right:10px; }
+    .grafika1-1 img, .grafika1-2 img, .grafika2-1 img, .grafika2-2 img, .grafika2-3 img, .grafika3-1 img, .grafika4-1 img, .grafika4-2 img, .grafika5-1 img, .grafika5-2 img, .grafika5-3 img, .grafika6-1 img, .grafika6-2 img, .grafika6-3 img, .grafika6-4 img, .grafika7-1 img, .grafika7-2 img, .grafika7-3 img {margin-left: 20px;margin-right: 20px; }
+}
+
+@media screen and (max-width: 420px){ 
+    .grafika1, .grafika2, .grafika3, .grafika4, .grafika5, .grafika6, .grafika7 { display: grid;}
+    .grafika1 img, .grafika2 img, .grafika3 img, .grafika4 img, .grafika5 img, .grafika6 img, .grafika7 img {width: auto; height: 140px; }    
+    .mojelogo h4, .postavy h4, .infografika h4, .logo h4, .webovky h4, .emoji h4 {margin: 25px; font-size: 25px;}
+    .grafika1 p, .grafika2 p, .grafika3 p, .grafika4 p, .grafika5 p, .grafika6 p, .grafika7 p {font-size: 12px;margin-left: 35px; margin-right: 35px; color: var(--second-color);}
+}
