--- a/root.css
+++ b/root.css
@@ -3,7 +3,7 @@
     --second-color: #f6f2ff;
     --third-color: #82A6ED;
     --fourth-color: rgb(200, 200, 200);
-    --first-font:  'Bodoni Moda', serif;
+    --first-font:  'Cormorant Infant', serif;
     --second-font: 'Work Sans', sans-serif;
 }
 
@@ -12,7 +12,7 @@
     --second-color: rgb(9, 9, 9);
     --third-color: #561790;
     --fourth-color: rgb(152, 152, 152);
-    --first-font: 'Bodoni Moda', serif;
+    --first-font: 'Cormorant Infant', serif;
     --second-font: 'Work Sans', sans-serif;
 }
 
