--- a/fotky.css
+++ b/fotky.css
@@ -26,35 +26,42 @@ body {
     font-size: 30px;
     margin-left: 0%;
     margin-right: 20px;
+    transition: 0.5s;
 }
 
 .star-icon {
     color: var(--second-color);
     padding: 12px;
+    transition: 0.5s;
 }
 
 .star-icon:hover {
     color: var(--third-color);
+    transition: 0.5s;
 }
 
 .home-icon {
     color: var(--second-color);
     padding: 12px;
     text-decoration: none;
+    transition: 0.5s;
 }
 
 .home-icon:hover {
     color: var(--third-color);
+    transition: 0.5s;
 }
 
 .portfolio-icon {
     color: var(--second-color);
     padding: 12px;
     text-decoration: none;
+    transition: 0.5s;
 }
 
 .portfolio-icon:hover {
     color: var(--third-color);
+    transition: 0.5s;
 }
 
 .lide, .zvirata, .ostatni {
@@ -69,7 +76,7 @@ body {
     font-family: var(--first-font);
     color: var(--second-color);
     text-transform: uppercase;
-    font-weight: 400;
+    font-weight: 500;
     letter-spacing: 0.6px;
 }
 
@@ -84,22 +91,36 @@ body {
     border-style: solid;
     border-width: 3px;
     border-color: var(--fourth-color) ;
+    transition: 0.5s;
 }
 
 .fotka1 img:hover, .fotka2 img:hover, .fotka3 img:hover, .fotka4 img:hover, .fotka5 img:hover, .fotka6 img:hover, .fotka7 img:hover, .fotka8 img:hover, .fotka9 img:hover {
     border-color: var(--third-color);
     transition: 200ms;
+    transition: 0.5s;
 }
 
 .fotka1 p, .fotka2 p, .fotka3 p, .fotka4 p, .fotka5 p, .fotka6 p, .fotka7 p, .fotka8 p, .fotka9 p {
     font-family: var(--second-font);
-    font-weight: 600;
+    font-weight: 400;
     letter-spacing: 0.3px;
     color: var(--fourth-color);
+    transition: 0.5s;
 }
 
 .fotka1 p:hover, .fotka2 p:hover, .fotka3 p:hover, .fotka4 p:hover, .fotka5 p:hover, .fotka6 p:hover, .fotka7 p:hover, .fotka8 p:hover, .fotka9 p:hover {
     color: var(--second-color);
+    transition: 0.5s;
+}
+
+@media screen and (max-width: 5000px ) {
+    .loader img {width: 10px;height: auto;}
+    #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 20%;}
+}
+
+@media screen and (max-width: 915px) {
+    .loader img {width: 10px;height: auto;}
+    #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 30%;}
 }
 
 @media screen and (max-width: 695px){
