--- a/texty.css
+++ b/texty.css
@@ -41,10 +41,12 @@ body {
     color: var(--second-color);
     padding: 12px;
     text-decoration: none;
+    transition: 0.5s;
 }
 
 .star-icon:hover, .home-icon:hover, .portfolio-icon:hover {
     color: var(--third-color);
+    transition: 0.5s;
 }
 
 .sloh1, .sloh2, .sloh3 {
@@ -56,6 +58,7 @@ body {
 .dopis-v-lahvi, .mami, .nevis {
     padding: 0%;
     margin: 0%;
+    transition: 0.5s;
 }
 
 .dopis-v-lahvi h4, .mami h4, .nevis h4 {
@@ -87,11 +90,12 @@ body {
     border-color: var(--second-color) ;
     padding: 0%;
     margin: 0%;
+    transition: 0.5s;
 }
 
 .dopis-v-lahvi img:hover, .mami img:hover, .nevis img:hover {
     border-color: var(--third-color) ;
-    transition: 200ms;
+    transition: 0.5s;
 }
 
 .dopis-v-lahvi a, .mami a, .nevis a {
@@ -102,6 +106,10 @@ body {
     padding-bottom: 50px;
 }
 
+@media screen and (max-width: 5000px ) {
+    .loader img {width: 10px;height: auto;}
+    #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 20%;}
+}
 
 @media screen and (max-width: 1320px){
     .dopis-v-lahvi p, .mami p, .nevis p { margin-left: 140px; margin-right: 140px;}
@@ -116,6 +124,11 @@ body {
 @media screen and (max-width: 1000px){
     .dopis-v-lahvi p, .mami p, .nevis p { margin-left: 180px; margin-right: 180px;}
     .sloh1, .sloh2, .sloh3 {display: grid;}
+}
+
+@media screen and (max-width: 915px) {
+    .loader img {width: 10px;height: auto;}
+    #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 30%;}
 }
 
 @media screen and (max-width: 790px){
