--- a/style.css
+++ b/style.css
@@ -317,14 +317,7 @@ footer {
 }
 
 @media screen and (max-width: 550px) {
-    .navigace {display: none;}
-    .mobile-nav {display: block;
-        padding-top: 15px;}
-    .mobile-nav a {font-size: 18px;}
-    .open {display: block;}
-    .open-mobile-nav {display: block;}
-    .header1 {display: none;}
-    .header2 { display: block;}
+    #load-logo {display: block; margin-left: auto;margin-right: auto;margin-bottom: 0%;margin-top: 16em;width: 40%;}
 }
  
 
