--- a/fotky.css
+++ b/fotky.css
@@ -133,6 +133,10 @@ body {
     .fotka1 img, .fotka2 img, .fotka3 img, .fotka4 img, .fotka5 img, .fotka6 img, .fotka7 img, .fotka8 img, .fotka9 img {height: 200px; width: auto;}
 }
 
+@media screen and (max-width: 550px) {
+    #load-logo {display: block; margin-left: auto;margin-right: auto;margin-bottom: 0%;margin-top: 16em;width: 40%;}
+}
+
 @media screen and (max-width: 390px){
     .fotka1 p, .fotka2 p, .fotka3 p, .fotka4 p, .fotka5 p, .fotka6 p, .fotka7 p, .fotka8 p, .fotka9 p{ margin-left: 80px; margin-right: 80px;}
     .fotka1 img, .fotka2 img, .fotka3 img, .fotka4 img, .fotka5 img, .fotka6 img, .fotka7 img, .fotka8 img, .fotka9 img {height: 160px; width: auto;}
