--- a/kontakt.css
+++ b/kontakt.css
@@ -107,3 +107,7 @@ body {
     .loader img {width: 10px;height: auto;}
     #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 30%;}
 }
+
+@media screen and (max-width: 550px) {
+    #load-logo {display: block; margin-left: auto;margin-right: auto;margin-bottom: 0%;margin-top: 16em;width: 40%;}
+}
